<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CastInformationActivity">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/person_picture"
            app:layout_constraintStart_toStartOf="@id/person_picture"
            app:layout_constraintTop_toBottomOf="@id/person_picture" />

        <TextView
            android:id="@+id/person_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/person_birthday"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/person_picture"
            app:layout_constraintTop_toTopOf="@id/person_picture" />

        <TextView
            android:id="@+id/person_birthday_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date_format"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/person_picture"
            app:layout_constraintTop_toBottomOf="@+id/person_birthday" />

        <TextView
            android:id="@+id/person_place_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/place_of_birth"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/person_picture"
            app:layout_constraintTop_toBottomOf="@id/person_birthday_text" />

        <TextView
            android:id="@+id/person_place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/place"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/person_picture"
            app:layout_constraintTop_toBottomOf="@id/person_place_birth" />

        <TextView
            android:id="@+id/person_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/occupation"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/person_picture"
            app:layout_constraintTop_toBottomOf="@id/person_place_text" />

        <TextView
            android:id="@+id/person_occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/profession"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/person_picture"
            app:layout_constraintTop_toBottomOf="@id/person_career"/>

        <ImageView
            android:id="@+id/star_unliked"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_star_border_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_view" />

        <ImageView
            android:id="@+id/star_liked"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_view" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_number"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="@id/star_unliked"
            app:layout_constraintEnd_toEndOf="@id/star_liked"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/biography_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:text="@string/biography"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_name" />

        <TextView
            android:id="@+id/biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="30dp"
            android:text="@string/biography"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biography_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>