<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background_picture"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/image_view"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/like_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/image_view"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/background_picture"
        app:layout_constraintEnd_toEndOf="@id/background_picture" />

    <ImageView
        android:id="@+id/like_movie_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/image_view"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/background_picture"
        app:layout_constraintEnd_toEndOf="@id/background_picture" />

    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toStartOf="@id/likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        tools:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/like_icon"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <TextView
        android:id="@+id/likes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/likes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <ImageView
        android:id="@+id/views_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_baseline_preview_24"
        android:contentDescription="@string/image_view"
        app:layout_constraintStart_toEndOf="@+id/likes_text"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <TextView
        android:id="@+id/views_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        tools:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/views_icon"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/views"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/views_text"
        app:layout_constraintTop_toBottomOf="@id/background_picture" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="6dp"
        tools:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_icon" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        tools:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>